<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_customize_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_quiz"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_difficulty"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinner_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_subject"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_number_of_questions"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edittext_num_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/example"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/button_start_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_quiz"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>
